--- a/radnja sajt/aboutUs.html
+++ b/radnja sajt/aboutUs.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="The page for knowing more about the shop.">
-<meta name="keywords" content="about us, policies, policy, contact number."
+<meta name="keywords" content="about us, policies, policy, contact number.">
 <title>Policies. Find out About ours.</title>
 <link 
   rel="stylesheet"
